# challenge

./: Dockerfile  README.md
src/challenge_pkg/: CMakeLists.txt  package.xml
src/challenge_pkg/action/: Pause.action
src/challenge_pkg/include/: path_sender.h  path_tracking_controller.h  pure_pursuit.h
src/challenge_pkg/include/challenge_pkg/: path_tracking_controller.h
src/challenge_pkg/launch/: challenge.launch  challenge.test
src/challenge_pkg/lib/: CMakeLists.txt  pure_pursuit.cpp
src/challenge_pkg/paths/: half_loop.csv  loop.csv  short.csv
src/challenge_pkg/src/: path_sender.cpp  path_sender_node.cpp  path_tracking_controller.cpp  path_tracking_controller_node.cpp
src/challenge_pkg/srv/: SetPath.srv
src/challenge_pkg/tests/: path_tracking_controller_utest.cpp  pure_pursuit_utest.cpp
